--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
       <title>G's</title>
-  <head>
+      <link rel="stylesheet" href="style.css">
+  </head>
   <body bgcolor=ffffff>
+    <div class="header">
       <h2>Belajar Membuat Website dengan HTML , CSS dan Layout</h2>
+    </div>
               <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
@@ -14,7 +17,7 @@
                       <h3>HTML</h3>
 
                       <p>HTML atau HyperText Markup Language merupakan sebuah bahasa markah untuk membuat halaman web </p>
-                      <button>Selengkapnya..</button>
+                      <button >Selengkapnya..</button>
                       <p>CSS atau Cascading StyleSheet adalah [...]</p> ...
                       <button >selengkapnya..</button>    
 
